[package]
name = "rustapc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_System_Threading", "Win32_Security"]}
